--- a/IDA_Class_Work_14_aug_Domen_Logic/IDA_Class_Work_14_aug_Domen_Logic.vcxproj.filters
+++ b/IDA_Class_Work_14_aug_Domen_Logic/IDA_Class_Work_14_aug_Domen_Logic.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Card.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Table.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Service functions.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Card.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Table.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
